--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_ENDPOINT=https://api.openai.com/v1
+OPENAI_ENDPOINT = os.getenv("OPENAI_ENDPOINT", "https://api.openai.com/v1")
 OPENAI_API_KEY=
 
 ANTHROPIC_API_KEY=
@@ -8,7 +8,7 @@ GOOGLE_API_KEY=
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
 
-DEEPSEEK_ENDPOINT=https://api.deepseek.com
+DEEPSEEK_ENDPOINT = os.getenv("DEEPSEEK_ENDPOINT", "https://api.deepseek.com")
 DEEPSEEK_API_KEY=
 
 # Set to false to disable anonymized telemetry
